# LibraryDjango

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/back_app/core/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
backend/back_app/users/: models.py  permissions.py  serializers.py  urls.py  views.py
backend/back_app/users/migrations/: 0001_initial.py  0002_user_extra_fields.py
core/: settings.py  urls.py
users/: admin.py  models.py  urls.py  views.py
