[tool.poetry]
name = "loginsystem"
version = "0.1.0"
description = ""
authors = ["Sn1kls <macks.chigrin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = {extras = ["cryptography"], version = "^5.3.1"}
mailhog = "^0.1.1"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"
drf-yasg = "^1.21.8"
drf-spectacular = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
