[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Snikls <macks.chigrin@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
